--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 accelerate
 modelcards
-transformers>=4.25.1
+transformers==4.25.1
+huggingface_hub==0.24.7
 diffusers==0.14.0
 tqdm 
 clip-retrieval
-openai
+openai==0.28
 triton
-xformers>=0.0.20
+xformers==0.0.20
 clean-fid
